// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interweave (with autolinking) doesnt render anchor links within anchor links 1`] = `
<Interweave
  content="- https://127.0.0.1/foo
  - <a href="www.domain.com">www.domain.com</a>
  - (http://domain.com/some/path?with=query)
  - <a href="http://domain.com">This text should stay</a>"
  disableFilters={false}
  disableMatchers={false}
  emptyContent={null}
  filters={[]}
  matchers={[ new EmailMatcher(), new HashtagMatcher(), new IpMatcher(), new UrlMatcher() ]}
  onAfterParse={null}
  onBeforeParse={null}
  tagName="div"
>
  <Markup
    content=""
    emptyContent={null}
    parsedContent={[
      "- ",
      <Url
      urlParts={{ auth: "", fragment: "", host: "127.0.0.1", path: "/foo", port: "", ... 2 more }}
    />,
      "
    - ",
      <Element attributes={{ href: "www.domain.com" }} tagName="a" />,
      "
    - (",
      ... 3 more,
    ]}
    tagName="div"
  >
    <Element tagName="div">
      <div>
        - 
        <Url
          urlParts={{ auth: "", fragment: "", host: "127.0.0.1", path: "/foo", port: "", ... 2 more }}
        >
          <Link href="https://127.0.0.1/foo">
            <a href="https://127.0.0.1/foo" rel="noopener noreferrer">
              https://127.0.0.1/foo
            </a>
          </Link>
        </Url>
        
- 
        <Element key="1" attributes={{ href: "www.domain.com" }} tagName="a">
          <a href="www.domain.com">
            www.domain.com
          </a>
        </Element>
        
- (
        <Url
          urlParts={{
            auth: "",
            fragment: "",
            host: "domain.com",
            path: "/some/path",
            port: "",
            ... 2 more,
          }}
        >
          <Link href="http://domain.com/some/path?with=query">
            <a
              href="http://domain.com/some/path?with=query"
              rel="noopener noreferrer"
            >
              http://domain.com/some/path?with=query
            </a>
          </Link>
        </Url>
        )
- 
        <Element key="3" attributes={{ href: "http://domain.com" }} tagName="a">
          <a href="http://domain.com">
            This text should stay
          </a>
        </Element>
      </div>
    </Element>
  </Markup>
</Interweave>
`;

exports[`Interweave (with autolinking) renders HTML text with all matchers 1`] = `
<Interweave
  content="<h1>Lorem ipsum dolor sit amet</h1>
  
  <p><b>Consectetur adipiscing elit.</b> Donec massa lorem, mollis non commodo quis, ultricies at elit. email@domain.com. Aliquam a arcu porttitor, aliquam eros sed, convallis massa. Nunc vitae vehicula quam, in feugiat ligula. #interweave Donec eu sem non nibh condimentum luctus. Vivamus pharetra feugiat blandit. Vestibulum neque velit, semper id vestibulum id, viverra a felis. Integer convallis in orci nec bibendum. Ut consequat posuere metus, <a href="www.domain.com">www.domain.com</a>.</p>
  
  <div>Curabitur lectus odio, <em>tempus quis velit vitae, cursus sagittis nulla</em>. Maecenas sem nulla, tempor nec risus nec, ultricies ultricies magna. https://127.0.0.1/foo Nulla malesuada lacinia libero non mollis. Curabitur id lacus id dolor vestibulum ornare quis a nisi (http://domain.com/some/path?with=query). Pellentesque ac finibus mauris. Sed eu luctus diam. Quisque porta lectus in turpis imperdiet dapibus.</div>
  
  <section>#blessed #interweave #milesj</section>"
  disableFilters={false}
  disableMatchers={false}
  emptyContent={null}
  filters={[]}
  matchers={[ new EmailMatcher(), new HashtagMatcher(), new IpMatcher(), new UrlMatcher() ]}
  onAfterParse={null}
  onBeforeParse={null}
  tagName="div"
>
  <Markup
    content=""
    emptyContent={null}
    parsedContent={[
      <Element tagName="h1" />,
      "
    
    ",
      <Element tagName="p" />,
      "
    
    ",
      <Element tagName="div" />,
      ... 2 more,
    ]}
    tagName="div"
  >
    <Element tagName="div">
      <div>
        <Element key="0" tagName="h1">
          <h1>Lorem ipsum dolor sit amet</h1>
        </Element>
        


        <Element key="1" tagName="p">
          <p>
            <Element key="2" tagName="b">
              <b>Consectetur adipiscing elit.</b>
            </Element>
             Donec massa lorem, mollis non commodo quis, ultricies at elit. 
            <Email emailParts={{ host: "domain.com", username: "email" }}>
              <Link href="mailto:email@domain.com">
                <a href="mailto:email@domain.com" rel="noopener noreferrer">
                  email@domain.com
                </a>
              </Link>
            </Email>
            . Aliquam a arcu porttitor, aliquam eros sed, convallis massa. Nunc vitae vehicula quam, in feugiat ligula. 
            <Hashtag hashtagName="interweave">
              <Link hashtagName="interweave" href="interweave">
                <a href="interweave" rel="noopener noreferrer">
                  #interweave
                </a>
              </Link>
            </Hashtag>
             Donec eu sem non nibh condimentum luctus. Vivamus pharetra feugiat blandit. Vestibulum neque velit, semper id vestibulum id, viverra a felis. Integer convallis in orci nec bibendum. Ut consequat posuere metus, 
            <Element key="5" attributes={{ href: "www.domain.com" }} tagName="a">
              <a href="www.domain.com">
                www.domain.com
              </a>
            </Element>
            .
          </p>
        </Element>
        


        <Element key="6" tagName="div">
          <div>
            Curabitur lectus odio, 
            <Element key="7" tagName="em">
              <em>tempus quis velit vitae, cursus sagittis nulla</em>
            </Element>
            . Maecenas sem nulla, tempor nec risus nec, ultricies ultricies magna. 
            <Url
              urlParts={{ auth: "", fragment: "", host: "127.0.0.1", path: "/foo", port: "", ... 2 more }}
            >
              <Link href="https://127.0.0.1/foo">
                <a href="https://127.0.0.1/foo" rel="noopener noreferrer">
                  https://127.0.0.1/foo
                </a>
              </Link>
            </Url>
             Nulla malesuada lacinia libero non mollis. Curabitur id lacus id dolor vestibulum ornare quis a nisi (
            <Url
              urlParts={{
                auth: "",
                fragment: "",
                host: "domain.com",
                path: "/some/path",
                port: "",
                ... 2 more,
              }}
            >
              <Link href="http://domain.com/some/path?with=query">
                <a
                  href="http://domain.com/some/path?with=query"
                  rel="noopener noreferrer"
                >
                  http://domain.com/some/path?with=query
                </a>
              </Link>
            </Url>
            ). Pellentesque ac finibus mauris. Sed eu luctus diam. Quisque porta lectus in turpis imperdiet dapibus.
          </div>
        </Element>
        


        <Element key="10" tagName="section">
          <section>
            <Hashtag hashtagName="blessed">
              <Link hashtagName="blessed" href="blessed">
                <a href="blessed" rel="noopener noreferrer">
                  #blessed
                </a>
              </Link>
            </Hashtag>
             
            <Hashtag hashtagName="interweave">
              <Link hashtagName="interweave" href="interweave">
                <a href="interweave" rel="noopener noreferrer">
                  #interweave
                </a>
              </Link>
            </Hashtag>
             
            <Hashtag hashtagName="milesj">
              <Link hashtagName="milesj" href="milesj">
                <a href="milesj" rel="noopener noreferrer">
                  #milesj
                </a>
              </Link>
            </Hashtag>
          </section>
        </Element>
      </div>
    </Element>
  </Markup>
</Interweave>
`;

exports[`Interweave (with autolinking) renders large blocks of text with all matchers 1`] = `
<Interweave
  content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec massa lorem, mollis non commodo quis, ultricies at elit. email@domain.com. Aliquam a arcu porttitor, aliquam eros sed, convallis massa. Nunc vitae vehicula quam, in feugiat ligula. #interweave Donec eu sem non nibh condimentum luctus. Vivamus pharetra feugiat blandit. Vestibulum neque velit, semper id vestibulum id, viverra a felis. Integer convallis in orci nec bibendum. Ut consequat posuere metus, www.domain.com.
  
  Curabitur lectus odio, tempus quis velit vitae, cursus sagittis nulla. Maecenas sem nulla, tempor nec risus nec, ultricies ultricies magna. https://127.0.0.1/foo Nulla malesuada lacinia libero non mollis. Curabitur id lacus id dolor vestibulum ornare quis a nisi (http://domain.com/some/path?with=query). Pellentesque ac finibus mauris. Sed eu luctus diam. Quisque porta lectus in turpis imperdiet dapibus.
  
  #blessed #interweave #milesj"
  disableFilters={false}
  disableMatchers={false}
  emptyContent={null}
  filters={[]}
  matchers={[ new EmailMatcher(), new HashtagMatcher(), new IpMatcher(), new UrlMatcher() ]}
  onAfterParse={null}
  onBeforeParse={null}
  tagName="div"
>
  <Markup
    content=""
    emptyContent={null}
    parsedContent={[
      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec massa lorem, mollis non commodo quis, ultricies at elit. ",
      <Email emailParts={{ host: "domain.com", username: "email" }} />,
      ". Aliquam a arcu porttitor, aliquam eros sed, convallis massa. Nunc vitae vehicula quam, in feugiat ligula. ",
      <Hashtag hashtagName="interweave" />,
      " Donec eu sem non nibh condimentum luctus. Vivamus pharetra feugiat blandit. Vestibulum neque velit, semper id vestibulum id, viverra a felis. Integer convallis in orci nec bibendum. Ut consequat posuere metus, ",
      ... 16 more,
    ]}
    tagName="div"
  >
    <Element tagName="div">
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec massa lorem, mollis non commodo quis, ultricies at elit. 
        <Email emailParts={{ host: "domain.com", username: "email" }}>
          <Link href="mailto:email@domain.com">
            <a href="mailto:email@domain.com" rel="noopener noreferrer">
              email@domain.com
            </a>
          </Link>
        </Email>
        . Aliquam a arcu porttitor, aliquam eros sed, convallis massa. Nunc vitae vehicula quam, in feugiat ligula. 
        <Hashtag hashtagName="interweave">
          <Link hashtagName="interweave" href="interweave">
            <a href="interweave" rel="noopener noreferrer">
              #interweave
            </a>
          </Link>
        </Hashtag>
         Donec eu sem non nibh condimentum luctus. Vivamus pharetra feugiat blandit. Vestibulum neque velit, semper id vestibulum id, viverra a felis. Integer convallis in orci nec bibendum. Ut consequat posuere metus, 
        <Url
          urlParts={{ auth: "", fragment: "", host: "www.domain.com", path: "", port: "", ... 2 more }}
        >
          <Link href="http://www.domain.com">
            <a href="http://www.domain.com" rel="noopener noreferrer">
              www.domain.com
            </a>
          </Link>
        </Url>
        .
        <Element key="3" selfClose tagName="br">
          <br />
        </Element>
        <Element key="4" selfClose tagName="br">
          <br />
        </Element>
        Curabitur lectus odio, tempus quis velit vitae, cursus sagittis nulla. Maecenas sem nulla, tempor nec risus nec, ultricies ultricies magna. 
        <Url
          urlParts={{ auth: "", fragment: "", host: "127.0.0.1", path: "/foo", port: "", ... 2 more }}
        >
          <Link href="https://127.0.0.1/foo">
            <a href="https://127.0.0.1/foo" rel="noopener noreferrer">
              https://127.0.0.1/foo
            </a>
          </Link>
        </Url>
         Nulla malesuada lacinia libero non mollis. Curabitur id lacus id dolor vestibulum ornare quis a nisi (
        <Url
          urlParts={{
            auth: "",
            fragment: "",
            host: "domain.com",
            path: "/some/path",
            port: "",
            ... 2 more,
          }}
        >
          <Link href="http://domain.com/some/path?with=query">
            <a
              href="http://domain.com/some/path?with=query"
              rel="noopener noreferrer"
            >
              http://domain.com/some/path?with=query
            </a>
          </Link>
        </Url>
        ). Pellentesque ac finibus mauris. Sed eu luctus diam. Quisque porta lectus in turpis imperdiet dapibus.
        <Element key="7" selfClose tagName="br">
          <br />
        </Element>
        <Element key="8" selfClose tagName="br">
          <br />
        </Element>
        <Hashtag hashtagName="blessed">
          <Link hashtagName="blessed" href="blessed">
            <a href="blessed" rel="noopener noreferrer">
              #blessed
            </a>
          </Link>
        </Hashtag>
         
        <Hashtag hashtagName="interweave">
          <Link hashtagName="interweave" href="interweave">
            <a href="interweave" rel="noopener noreferrer">
              #interweave
            </a>
          </Link>
        </Hashtag>
         
        <Hashtag hashtagName="milesj">
          <Link hashtagName="milesj" href="milesj">
            <a href="milesj" rel="noopener noreferrer">
              #milesj
            </a>
          </Link>
        </Hashtag>
      </div>
    </Element>
  </Markup>
</Interweave>
`;
